--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="">Chamber</a></li>
             <li><a href="">Site Plan</a></li>
             <li><a href="">Form</a></li>
@@ -32,7 +32,7 @@
             <section class="card">
                 <h2>Learning Activities</h2>
                 <ul>
-                    <li>Week 01:<a href=""></a></li>
+                    <li>Week 01: <a href="/week01/holygrail.html">Layout</a> | <a href="/week01/media-query.html">Media Query</a> | <a href="https://codepen.io/nstod2/pen/jOJrJJq">JS Pen</a></li>
                     <li>Week 02:<a href=""></a></li>
                     <li>Week 03:<a href=""></a></li>
                     <li>Week 04:<a href=""></a></li>
