Javascript for last modified

--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
     </main>
     <footer>
         <p>
-            <span>&copy 2024</span> 
+            <span id="copyright"></span> 
             <span>Nancy Stoddart</span>
             <span>United States of America</span>
         </p>
         <p id="lastModified">Last Modified: </p>
     </footer>
+    <script src="scripts/getDates.js"></script>
     
 </body>
 </html>
