Fixed chamber-site-plan.html space

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -60,7 +60,7 @@
             
         </section>
         <section class="wireframe">
-            <h2>Wireframe</h2>
+            <h2>Wireframes</h2>
             <section id="images">
                 <img src="images/home.png" alt="Home page wireframe">
                 <img src="images/discover.png" alt="Discover page wireframe">
@@ -69,7 +69,7 @@
             </section>
         </section>
         <footer>
-            <p>&copy 2024  |  Nancy Stoddart  | WDD 230 Front End Development</p>
+            <p>&copy2024  |  Nancy Stoddart  | WDD 230 Front End Development</p>
         </footer>
         
     </main>
