--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chamber Site Plan</title>
     <meta name="description" content="Chamber Site Plan">
     <meta name="author" content="Nancy Stoddart">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,11 +18,11 @@
     </header>
     <main>
         <section class="name">
-            <h2>Colorado Springs Chamber of Commerce</h2>
-            <p> This name represents the city I have selected to base my business commerce site about.</p>
+            <h2>Site Name</h2>
+            <p> The site name will be Colorado Springs Chamber of Commerce because it represents the city I have selected to base my business commerce site about.</p>
         </section>
         <section class="purpose">
-            <h2>Site purpose</h2>
+            <h2>Purpose</h2>
             <p> This site purpose is to encourage businesses to join the Colorado Springs Chamber of Commerce.  The website will show them community events and 
                 local resources available to their businesses, if they choose to join. The Colorado Springs Chamber of Commerce will spotlight local businesses,
                 history and events, drawing new consumers and tourists to the community's businesses. The site will offer information on the different tiers of membership 
@@ -39,7 +39,7 @@
             </ul>
         </section>
         <section class="color">
-            <h2>Color schema</h2>
+            <h2>Color Schema</h2>
             <section id="palette">
                 <p id="primary">Primary</p>
                 <p id="secondary">Secondary</p>
@@ -60,7 +60,7 @@
             
         </section>
         <section class="wireframe">
-            <h2>Wireframes</h2>
+            <h2>Wireframe</h2>
             <section id="images">
                 <img src="images/home.png" alt="Home page wireframe">
                 <img src="images/discover.png" alt="Discover page wireframe">
