--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li class="active"><a href="/">Home</a></li>
             <li><a href="">Chamber</a></li>
-            <li><a href="">Site Plan</a></li>
+            <li><a href="https://nstod2.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="">Form</a></li>
         </ul>
     </nav>
