--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Plan</title>
+    <title>Chamber Site Plan</title>
     <meta name="description" content="Chamber Site Plan">
     <meta name="author" content="Nancy Stoddart">
     <link rel="preconnect" href="https://fonts.googleapis.com">
