--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -69,7 +69,7 @@
             </section>
         </section>
         <footer>
-            <p>&copy2024  |  Nancy Stoddart  | WDD 230 Front End Development</p>
+            <p>&copy;2024  |  Nancy Stoddart  | WDD 230 Front End Development</p>
         </footer>
         
     </main>
