--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="My Course Homepage" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nstod2.github.io/wdd230/" />
+    <meta property="og:image" content="https://media.timeout.com/images/105231037/750/422/image.jpg" />
 
 </head>
 <body>
