--- a/week02/bom.html
+++ b/week02/bom.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/bom.css">
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
@@ -13,6 +14,6 @@
 	    <button type="submit">Add Chapter</button>
 	    <ul id="list"></ul>
     </main>
-    
+    <script src="scripts/bom.js"></script>
 </body>
 </html>
