--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2>Learning Activities</h2>
                 <ul>
                     <li>Week 01: <a href="https://nstod2.github.io/wdd230/week01/holygrail.html">Layout</a> | <a href="https://nstod2.github.io/wdd230/week01/media-query.html">Media Query</a> | <a href="https://codepen.io/nstod2/pen/jOJrJJq">JS Pen</a></li>
-                    <li>Week 02: <a href="https://nstod2.github.io/wdd230/week02/design.html">Web Design Principles</a> | <a href="https://codepen.io/nstod2/pen/ExMmvqm">Codepen</a> | </li>
+                    <li>Week 02: <a href="https://nstod2.github.io/wdd230/week02/design.html">Web Design Principles</a> | <a href="https://codepen.io/nstod2/pen/ExMmvqm">Codepen</a> | <a href="https://nstod2.github.io/wdd230/week02/bom.html">DOM Manipulation</a></li>
                     <li>Week 03:<a href=""></a></li>
                     <li>Week 04:<a href=""></a></li>
                     <li>Week 05:<a href=""></a></li>
