--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nancy Stoddart - WDD 230 - Web FrontEnd Development</title>
     <meta name="description" content="Nancy Stoddart's course assigment portal for WDD 230 - Web FrontEnd Development.">
     <meta name="author" content="">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
