Changes to navigation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <span>Nancy Stoddart</span>
     </header>
     <nav>
-        <ul>
+        <button id="menu"></button>
+        <ul class="navigation">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="">Chamber</a></li>
             <li><a href="https://nstod2.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
