Added Dark Mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <header>
+        <div id="mode">&#9790;</div>
         <img src="images/profile.jpg" alt="Nancy Stoddart">
         <span>Nancy Stoddart</span>
     </header>
