--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nancy Stoddart - WDD 230 - Web FrontEnd Development</title>
+    <title>Nancy Stoddart - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Nancy Stoddart's course assigment portal for WDD 230 - Web FrontEnd Development.">
     <meta name="author" content="">
     <link rel="stylesheet" href="styles/normalize.css">
