Chamber home changes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,6 +18,21 @@
     <meta property="og:image" content="https://media.timeout.com/images/105231037/750/422/image.jpg" />
 </head>
 <body>
+    <header>
+        <img src="images/cslogo.png" alt="Colorado Springs Commerce Logo">
+        <div id="header">
+            <span>Colorado Springs</span>
+            <span>Chamber of Commerce</span>
+        </div>
+    </header>
+    <nav>
+        <ul class="navigation">
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Directory</a></li>
+            <li><a href="">Join</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
