--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nancy Stoddart - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="Nancy Stoddart's course assigment portal for WDD 230 - Web FrontEnd Development.">
-    <meta name="author" content="">
+    <meta name="author" content="Nancy Stoddart">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
