image adjustments Week 3

--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -12,12 +12,12 @@
         <h1>Lazy Loading</h1>
     </header>
     <main>
-        <img src="images/jatho.jpg" alt="Kitten Jatho" loading="lazy" width="400" height="600">
-        <img src="images/javan.jpg" alt="Kitten Javan" loading="lazy" width="400" height="600">
-        <img src="images/jawa.jpg" alt="Kitten Jawa" loading="lazy" width="400" height="600">
-        <img src="images/jedlik.jpg" alt="Kitten Jedlik" loading="lazy" width="400" height="600">
-        <img src="images/jellyfish.jpg" alt="Kitten Jellyfish" loading="lazy" width="400" height="600">
-        <img src="images/jerboa.jpg" alt="Kitten Jellyfish" loading="lazy" width="400" height="600">
+        <img src="images/jatho.jpeg" alt="Kitten Jatho" loading="lazy" width="400" height="600">
+        <img src="images/javan.jpeg" alt="Kitten Javan" loading="lazy" width="400" height="600">
+        <img src="images/jawa.jpeg" alt="Kitten Jawa" loading="lazy" width="400" height="600">
+        <img src="images/jedlik.jpeg" alt="Kitten Jedlik" loading="lazy" width="400" height="600">
+        <img src="images/jellyfish.jpeg" alt="Kitten Jellyfish" loading="lazy" width="400" height="600">
+        <img src="images/jerboa.jpeg" alt="Kitten Jellyfish" loading="lazy" width="400" height="600">
     </main>
     <footer>
         <p>
