--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -6,6 +6,15 @@
     <title>Responsive Images</title>
 </head>
 <body>
+    <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/hero-small.webp" media="(max-width: 500px)">
+                <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
+                <img src="images/hero-large.webp" alt="Draper temple" width="1500" height="750">
+            </picture>
+        </div>
+    </main>
     
 </body>
 </html>
