Change Visit Counter

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         </ul>
     </nav>
     <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/small-bountiful.webp" media="(max-width: 400px)">
+                <source srcset="images/large-bountiful.webp" media="(max-width: 960px)">
+                <img src="images/large-bountiful.webp" alt="Bountiful temple">
+            </picture>
+            <span>Bountiful Temple</span>
+        </div>
         <h1>WDD 230: Web Frontend Development</h1>
         <div id="parent">
             <section class="card">
@@ -42,19 +50,20 @@
                 <ul>
                     <li>Week 01: <a href="https://nstod2.github.io/wdd230/week01/holygrail.html">Layout</a> | <a href="https://nstod2.github.io/wdd230/week01/media-query.html">Media Query</a> | <a href="https://codepen.io/nstod2/pen/jOJrJJq">JS Pen</a></li>
                     <li>Week 02: <a href="https://nstod2.github.io/wdd230/week02/design.html">Web Design Principles</a> | <a href="https://codepen.io/nstod2/pen/ExMmvqm">Codepen</a> | <a href="https://nstod2.github.io/wdd230/week02/bom.html">DOM Manipulation</a></li>
-                    <li>Week 03:<a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazy Loading</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">Local Storage</a></li>
-                    <li>Week 04:<a href=""></a></li>
-                    <li>Week 05:<a href=""></a></li>
-                    <li>Week 06:<a href=""></a></li>
+                    <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazyload</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">Local Storage</a></li>
+                    <li>Week 04: <a href=""></a></li>
+                    <li>Week 05: <a href=""></a></li>
+                    <li>Week 06: <a href=""></a></li>
                 </ul>
             </section>
             <section class="card">
                 <h2>Information</h2>
                 <p>Placeholder 1</p>
                 <p>Placeholder 2</p>
-                <p>Placeholder 3</p>
+                <p>Number of visits: <span class="visits"></span></p>
             </section>
         </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d49639.78755619995!2d-104.74013796892892!3d38.95855285315967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1706211302165!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>
