--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2>Information</h2>
                 <p>Placeholder 1</p>
                 <p>Placeholder 2</p>
-                <p>Number of visits: <span class="visits"></span></p>
+                <p>Visit count: <span class="visits"></span></p>
             </section>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d49639.78755619995!2d-104.74013796892892!3d38.95855285315967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1706211302165!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
