Change profile pic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div id="mode">&#9790;</div>
-        <img src="images/profile.jpg" alt="Nancy Stoddart">
+        <img src="images/profile.webp" alt="Nancy Stoddart">
         <span>Nancy Stoddart</span>
     </header>
     <nav>
