Chamber home page changes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,6 +33,13 @@
             <li><a href="">Join</a></li>
         </ul>
     </nav>
-    
+    <div class="hero">
+        <picture>
+            <source srcset="images/colorado-springs-small.webp" media="(max-width: 400px)">
+            <source srcset="images/colorado-springs-medium.webp" media="(max-width: 900px)">
+            <img src="images/colorado-springs-large.webp" alt="Colorado Springs">
+        </picture>
+        <span class="joinus">Join Now</span>
+    </div>
 </body>
 </html>
