Changes to Homepage

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -83,7 +83,9 @@
     </main>
     <footer>
         <div class="information">
-            <img src="images/cslogo.png" alt="Logo">
+            <div class="footlogo">
+                <img src="images/cslogo.png" alt="Logo">
+            </div>
             <div class="address">
                 <h3>Colorado Springs</h3>
                 <h3>Chamber of Commerce</h3>
@@ -96,8 +98,9 @@
                 <p>Location Map</p>
             </div>        
         </div>
-        <p>
-            <span id="copyright"></span> 
+        <p class="bottom">
+            <span id="copyright"></span>  
+            <span> CS Chamber </span>
             <span>| Nancy Stoddart | </span>
             <span>WDD 230 Project | </span>
             <span id="lastModified"></span>
