--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <meta property="og:title" content="My Course Homepage" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:url" content="https://nstod2.github.io/wdd230/chamber/index.html" />
     <meta property="og:image" content="https://media.timeout.com/images/105231037/750/422/image.jpg" />
 </head>
 <body>
@@ -44,6 +44,7 @@
                 <img src="images/colorado-springs-large.webp" alt="Colorado Springs">
             </picture>
             <span class="joinus">Join Now</span>
+            <h1>Colorado Springs, Colorado</h1>
         </div>
         <div id="parent1">
             <section class="eventcard">
