--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
     <nav>
         <button id="menu"></button>
         <ul class="navigation">
-            <li class="active"><a href="">Home</a></li>
+            <li class="active"><a href="https://nstod2.github.io/wdd230/chamber/index.html">Home</a></li>
             <li><a href="">Discover</a></li>
             <li><a href="">Directory</a></li>
             <li><a href="">Join</a></li>
