--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
                 <img src="images/colorado-springs-large.webp" alt="Colorado Springs">
             </picture>
             <span class="joinus">Join Now</span>
-            <h1>Colorado Springs, Colorado</h1>
+            <h1>Colorado Springs Chamber of Commerce</h1>
         </div>
         <div id="parent1">
             <section class="eventcard">
