--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="">Chamber</a></li>
+            <li><a href="https://nstod2.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li><a href="https://nstod2.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="">Form</a></li>
         </ul>
