--- a/week04/index.html
+++ b/week04/index.html
@@ -31,7 +31,7 @@
 
     <main>
         <h1>Course Proposal Application</h1>
-            <form method="get" action="thanks.html"></form>
+        <form method="get" action="thanks.html">
             <fieldset>
                 <legend>Application Information</legend>
                 <label class="top">First Name* <input type="text" name="fname" required></label>
@@ -57,7 +57,7 @@
                 <label class="top">Anticipated Completion Date <input type="date" name="completeDate"></label>
                 <label class="top">Course Subject
                     <select name="subject">
-                        <option value="">Please select</opt ion>
+                        <option value="">Please select &#9662;</opt ion>
                     <option value="software">Software Development</option>
                     <option value="creative">Creative Professional</option>
                     <option value="info">Information Technology</option>
@@ -68,9 +68,8 @@
                 </label>
                 <label class="top">How Many Authors <input type="number" name="authors"></label>
             </fieldset>
-            <input type="submit" value="Propose My Course" class="submit">
-
-
+            <input type="submit" value="Propose My Course" class="submitBtn">
+        </form>
     </main>
 
 
