Fixing form page

--- a/record.html
+++ b/record.html
@@ -32,19 +32,8 @@
         </ul>
     </nav>
     <main>
-        <h1 id="formheading">Simple Form</h1>
-        <div id="formmsg">! Your passwords DO NOT MATCH !</div>
-        <form method="get" action="record.html">
-            <fieldset>
-                <legend>Form Test</legend>
-                <label class="top">Username* <input type="text" name="username" id="username" required></label>
-                <label class="top">Password* <input type="password" name="pswrd" id="pswrd" required pattern="[A-Za-z0-9]{8,}" placeholder="At least 8 characters. Must be alpha-numeric."></label>
-                <label class="top">Password Confirmation* <input type="password" name="pswrd2" id="pswrd2" required pattern="[A-Za-z0-9]{8,}"></label>
-                <label class="top">Email* <input type="email" name="email" id="email" required pattern="[a-zA-Z0-9._%+-]+@byui\.edu$" placeholder="Please enter your valid school email address."></label>
-                <label class="top" id="pagerating">Page Rating: <div id="rv">1</div><input type="range" name="rating" id="rating" min="0" max="9" value="0"></label>
-                <input type="submit" value="Test My Info" class="submitBtn">
-            </fieldset>
-        </form>
+        <h1 id="confirmation">Confirmation Page</h1>
+        <p id="cmsg">Thank you for testing your information!</p>
 
     </main>
     <footer>
