--- a/form.html
+++ b/form.html
@@ -25,10 +25,10 @@
     <nav>
         <button id="menu"></button>
         <ul class="navigation">
-            <li><a href="/">Home</a></li>
+            <li><a href="https://nstod2.github.io/wdd230">Home</a></li>
             <li><a href="https://nstod2.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li><a href="https://nstod2.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
-            <li class="active"><a href="">Form</a></li>
+            <li class="active"><a href="/">Form</a></li>
         </ul>
     </nav>
     <main>
