--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="active"><a href="/">Home</a></li>
             <li><a href="https://nstod2.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li><a href="https://nstod2.github.io/wdd230/week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="">Form</a></li>
+            <li><a href="https://nstod2.github.io/wdd230/form.html">Form</a></li>
         </ul>
     </nav>
     <main>
