Discover page for chamber site

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -53,10 +53,10 @@
             </div>
             <div id="visitcard">
                 <h2>Visits</h2>
-                <p id="visits"></p>
+                <p id="days"></p>
             </div>
             <div id="democard">
-                <h2>Colorado Springs</h2>
+                <h2>Colorado Springs</h2>   
                 <p>Population of 475,282</p>
                 <p>Median Age of 34.9</p>
                 <p>50.12% Male</p>
