--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li class="active"><a href="/chamber/index.html">Home</a></li>
-            <li><a href="">Discover</a></li>
+            <li><a href="/chamber/discover.html">Discover</a></li>
             <li><a href="">Directory</a></li>
             <li><a href="">Join</a></li>
         </ul>
