Change Title on Discover

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorado Springs Chamber of Commerce</title>
+    <title>Colorado Springs Chamber of Commerce Discover</title>
     <meta name="description" content="Nancy Stoddart's course assigment portal for WDD 230 - Web FrontEnd Development.">
     <meta name="author" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li><a href="/chamber/index.html">Home</a></li>
-            <li class="active"><a href="">Discover</a></li>
+            <li class="active"><a href="/chamber/discover.html">Discover</a></li>
             <li><a href="">Directory</a></li>
             <li><a href="">Join</a></li>
         </ul>
