Fixed discover url

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/larger.css">
     <meta property="og:title" content="My Course Homepage" />
     <meta property="og:type" content="Website" />
-    <meta property="og:url" content="https://nstod2.github.io/wdd230/chamber/index.html" />
+    <meta property="og:url" content="https://nstod2.github.io/wdd230/chamber/discover.html" />
     <meta property="og:image" content="https://media.timeout.com/images/105231037/750/422/image.jpg" />
 </head>
 
