--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -41,7 +41,7 @@
         </ul>
     </nav>
     <main>
-        <h1 id="discover">Discover Colorado Springs</h1>
+        <h1 id="discover">Discover Colorado Springs Chamber of Commerce</h1>
         <div id="grid1">
             <div id="attcard">
                 <h2>Colorado Springs Attractions</h2>
