--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -81,18 +81,20 @@
                 <p>Feb 24 - Annual Gala</p>
             </div>
             <div id="images">
-                <img  src="images/pikespeak.webp" alt="Pikes Peak" loading="lazy">
-                <figcaption>Pikes Peak</figcaption>
-                <img  src="images/garden.webp" alt="Garden of the Gods" loading="lazy">
-                <figcaption>Garden of the Gods</figcaption>
-                <img  src="images/zoo.webp" alt="Cheyenne Mountain Zoo" loading="lazy">
-                <figcaption>Cheyenne Mountain Zoo</figcaption>
-                <img  src="images/castle.webp" alt="Glen Eyrie Castle" loading="lazy">
-                <figcaption>Glen Eyrie Castle</figcaption>
-                <img  src="images/olympic.webp" alt="US Olympic & Paralympic Training Center" loading="lazy">
-                <figcaption>US Olympic & Paralympic Training Center</figcaption>
-                <img  src="images/sevenfalls.webp" alt="Broadmoor Seven Falls" loading="lazy">
-                <figcaption>Broadmoor Seven Falls</figcaption>
+                <figure>
+                    <img  src="images/pikespeak.webp" alt="Pikes Peak" loading="lazy">
+                    <figcaption>Pikes Peak</figcaption>
+                    <img  src="images/garden.webp" alt="Garden of the Gods" loading="lazy">
+                    <figcaption>Garden of the Gods</figcaption>
+                    <img  src="images/zoo.webp" alt="Cheyenne Mountain Zoo" loading="lazy">
+                    <figcaption>Cheyenne Mountain Zoo</figcaption>
+                    <img  src="images/castle.webp" alt="Glen Eyrie Castle" loading="lazy">
+                    <figcaption>Glen Eyrie Castle</figcaption>
+                    <img  src="images/olympic.webp" alt="US Olympic & Paralympic Training Center" loading="lazy">
+                    <figcaption>US Olympic & Paralympic Training Center</figcaption>
+                    <img  src="images/sevenfalls.webp" alt="Broadmoor Seven Falls" loading="lazy">
+                    <figcaption>Broadmoor Seven Falls</figcaption>
+                </figure>
             </div>
         </div>
     </main>
