--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -84,14 +84,24 @@
                 <figure>
                     <img  src="images/pikespeak.webp" alt="Pikes Peak" loading="lazy">
                     <figcaption>Pikes Peak</figcaption>
+                </figure>
+                <figure>
                     <img  src="images/garden.webp" alt="Garden of the Gods" loading="lazy">
                     <figcaption>Garden of the Gods</figcaption>
+                </figure>
+                <figure>
                     <img  src="images/zoo.webp" alt="Cheyenne Mountain Zoo" loading="lazy">
                     <figcaption>Cheyenne Mountain Zoo</figcaption>
+                </figure>
+                <figure>
                     <img  src="images/castle.webp" alt="Glen Eyrie Castle" loading="lazy">
                     <figcaption>Glen Eyrie Castle</figcaption>
+                </figure>
+                <figure>
                     <img  src="images/olympic.webp" alt="US Olympic & Paralympic Training Center" loading="lazy">
                     <figcaption>US Olympic & Paralympic Training Center</figcaption>
+                </figure>
+                <figure>
                     <img  src="images/sevenfalls.webp" alt="Broadmoor Seven Falls" loading="lazy">
                     <figcaption>Broadmoor Seven Falls</figcaption>
                 </figure>
