--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -81,30 +81,30 @@
                 <p>Feb 24 - Annual Gala</p>
             </div>
             <div id="images">
-                <figure>
+                <picture class="pics">
                     <img  src="images/pikespeak.webp" alt="Pikes Peak" loading="lazy">
-                    <figcaption>Pikes Peak</figcaption>
-                </figure>
-                <figure>
+                    <span>Pikes Peak</span>
+                </picture>
+                <picture class="pics">
                     <img  src="images/garden.webp" alt="Garden of the Gods" loading="lazy">
-                    <figcaption>Garden of the Gods</figcaption>
-                </figure>
-                <figure>
+                    <span>Garden of the Gods</span>
+                </picture>
+                <picture class="pics">
                     <img  src="images/zoo.webp" alt="Cheyenne Mountain Zoo" loading="lazy">
-                    <figcaption>Cheyenne Mountain Zoo</figcaption>
-                </figure>
-                <figure>
+                    <span>Cheyenne Mountain Zoo</span> 
+                </picture>
+                <picture class="pics">
                     <img  src="images/castle.webp" alt="Glen Eyrie Castle" loading="lazy">
-                    <figcaption>Glen Eyrie Castle</figcaption>
-                </figure>
-                <figure>
+                    <span>Glen Eyrie Castle</span>
+                </picture>            
+                <picture class="pics">
                     <img  src="images/olympic.webp" alt="US Olympic & Paralympic Training Center" loading="lazy">
-                    <figcaption>US Olympic & Paralympic Training Center</figcaption>
-                </figure>
-                <figure>
+                    <span>US Olympic & Paralympic Training Center</span>
+                </picture>
+                <picture class="pics">
                     <img  src="images/sevenfalls.webp" alt="Broadmoor Seven Falls" loading="lazy">
-                    <figcaption>Broadmoor Seven Falls</figcaption>
-                </figure>
+                    <span>Broadmoor Seven Falls</span>
+                </picture>
             </div>
         </div>
     </main>
