--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -81,30 +81,33 @@
                 <p>Feb 24 - Annual Gala</p>
             </div>
             <div id="images">
-                <picture class="pics">
+                <div class="pics">
                     <img  src="images/pikespeak.webp" alt="Pikes Peak" loading="lazy">
                     <span>Pikes Peak</span>
-                </picture>
-                <picture class="pics">
+                </div>
+
+                <div class="pics">
                     <img  src="images/garden.webp" alt="Garden of the Gods" loading="lazy">
                     <span>Garden of the Gods</span>
-                </picture>
-                <picture class="pics">
+                </div>
+                
+                <div class="pics">
                     <img  src="images/zoo.webp" alt="Cheyenne Mountain Zoo" loading="lazy">
-                    <span>Cheyenne Mountain Zoo</span> 
-                </picture>
-                <picture class="pics">
+                    <span>Cheyenne Mountain Zoo</span>
+                </div>
+                 
+                <div class="pics">
                     <img  src="images/castle.webp" alt="Glen Eyrie Castle" loading="lazy">
-                    <span>Glen Eyrie Castle</span>
-                </picture>            
-                <picture class="pics">
+                    <span>Glen Eyrie Castle</span> 
+                </div>           
+                <div class="pics">
                     <img  src="images/olympic.webp" alt="US Olympic & Paralympic Training Center" loading="lazy">
                     <span>US Olympic & Paralympic Training Center</span>
-                </picture>
-                <picture class="pics">
+                </div> 
+                <div class="pics">
                     <img  src="images/sevenfalls.webp" alt="Broadmoor Seven Falls" loading="lazy">
                     <span>Broadmoor Seven Falls</span>
-                </picture>
+                </div>
             </div>
         </div>
     </main>
