Working on form timestamp

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -61,7 +61,7 @@
                     <label><input type="radio" name="membership" value="bronze">Bronze Membership</label>
                     <label><input type="radio" name="membership" value="silver">Silver Membership</label>
                     <label><input type="radio" name="membership" value="gold">Gold Membership</label>
-                    <input type="hidden" name="timestamp" id="timestamp">
+                    <label><input type="hidden" name="timestamp" id="timestamp" value=""></label>
                 </fieldset>
             </form>
 
