--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -139,6 +139,7 @@
 
     </footer>
     <script src="scripts/chamber.js"></script>
+    <script src="scripts/discover.js"></script>
 </body>
 
 </html>
