--- a/chamber/join.html
+++ b/chamber/join.html
@@ -37,7 +37,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="discover.html">Discover</a></li>
             <li><a href="">Directory</a></li>
-            <li class="active"><a href="join.html">Join</a></li>
+            <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
     <main>
@@ -57,7 +57,7 @@
                     <label class="above">Phone* <input type="tel" name="phone" id="phone" placeholder="1235551234"></label>
                     <label class="above">Organization Name* <input type="text" name="orgname" id="orgname" required></label>
                     <div>Membership Level</div>
-                    <label class="left"><input type="radio" name="membership" value="nonprofit">NP Membership</label>
+                    <label class="left"><input type="radio" name="membership" value="nonprofit">Nonprofit Membership</label>
                     <label class="left"><input type="radio" name="membership" value="bronze">Bronze Membership</label>
                     <label class="left"><input type="radio" name="membership" value="silver">Silver Membership</label>
                     <label class="left"><input type="radio" name="membership" value="gold">Gold Membership</label>
@@ -95,7 +95,7 @@
                 <ul class="perks">
                     <li>Place in our citywide business directory</li>
                     <li>Full page advertisement in business directory</li>
-                    <li>Unlimited access to yearly networking and business development events</li>
+                    <li>Unlimited access to networking and business development events</li>
                     <li>Yearly gala tickets</li>
                     <li>Two business spotlights on the website</li>
                 </ul>
