--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li>Week 02: <a href="https://nstod2.github.io/wdd230/week02/design.html">Web Design Principles</a> | <a href="https://codepen.io/nstod2/pen/ExMmvqm">Codepen</a> | <a href="https://nstod2.github.io/wdd230/week02/bom.html">DOM Manipulation</a></li>
                     <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="week03/lazyload.html">Lazyload</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">Local Storage</a></li>
                     <li>Week 04: <a href="https://codepen.io/nstod2/pen/vYPdwqy">CodePen</a> | <a href="week04/images/combinators.png">Combinators</a> | <a href="week04/tablebuild.html">Tables</a> | <a href="https://nstod2.github.io/wdd230/week04/index.html">Form</a></li>
-                    <li>Week 05: <a href="https://codepen.io/nstod2/pen/abMapZG">CodePen</a> | <a href="https://nstod2.github.io/wdd230/week05/new-ward-members.json">Json</a> | <a href="week05/prophets.html">Prophets</a></li>
+                    <li>Week 05: <a href="https://codepen.io/nstod2/pen/abMapZG">CodePen</a> | <a href="https://nstod2.github.io/wdd230/week05/new-ward-members.json">Json</a> | <a href="week05/prophets.html">Prophets</a> | <a href="week05/weather.html">Weather API</a></li>
                     <li>Week 06: <a href=""></a></li>
                 </ul>
             </section>
