Group Activity Weather API

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
             </section>
             <section class="card">
                 <h2>Information</h2>
-                <p>Placeholder 1</p>
-                <p>Placeholder 2</p>
+                <p id="cs">Colorado Springs</p>
+                <p>Temp: <span id="temp"></span></p>
+                <img id="wicon" src="" alt="">
+                <p>Currently: <span id="desc"></span></p>
                 <p>Visit count: <span class="visits"></span></p>
             </section>
         </div>
