--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
         <p id="lastModified">Last Modified: </p>
     </footer>
     <script src="scripts/getDates.js"></script>
-    
+    <script src="scripts/links.js"></script>
 </body>
 </html>
